--- a/src/pages/juegayaprende/jovenes/jovenes1/Jovenes1.css
+++ b/src/pages/juegayaprende/jovenes/jovenes1/Jovenes1.css
@@ -30,26 +30,39 @@
     margin-bottom: 1rem;
 }
 
-.gradient-box {
+.gradient-box-body, .gradient-box-other{
     width: 200px;
     height: 225px;
     padding:0.1px;
     background: -webkit-linear-gradient(#FF7A00 0%, #F67209 0.01%, #A12161 81.35%);
     border-radius: 10px;
     margin: 10px;
+    max-width: 300px;
 }
 
-.gradient-box h3 {
+.gradient-box-body h3, .gradient-box-other h3{
     font-family: 'Oswald';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
 }
 
-.gradient-box p {
+.gradient-box-body p, .gradient-box-other p{
     font-weight: 400;
     margin: 1rem;
     text-align: center;
+}
+
+.box-education{
+    min-height: 215px;
+    margin:5px;
+    background-color:var(--fondo);
+    border-radius: 10px;
+    padding:.5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .go {
@@ -125,23 +138,6 @@
     height: 100%;
 }
 
-.barnav-recursosyjuegos{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 2rem;
-}
-
-.ds-barnav-interna{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 80px;
-    padding:0 10px;
-    /*border: 2px solid;*/
-}
-
 .button-adult, .desactive:hover{
     background: var(--rosa-oscuro);
     border: 2px solid var(--rosa-oscuro);
@@ -161,18 +157,6 @@
     text-decoration: none;
     padding: 2px 5px;
     font-size: 15px;
-}
-
-.ds-img-menu{
-    margin: 1rem;
-    max-height: 100px;
-    height: 60%;
-    padding-bottom: 5px;
-}
-
-.ds-imglinea-nav{
-    margin: 0 10px;
-    height:70px;
 }
 
 /*Resolución de tablet*/
@@ -228,11 +212,11 @@
         font-size: 30px;
     } 
 
-    .gradient-box h3 {
+    .gradient-box-body h3, .gradient-box-other h3{
         font-size: 35px;
     }
     
-    .gradient-box p {
+    .gradient-box-body p, .gradient-box-other p{
         font-size: 30px;
     }
 
@@ -247,12 +231,12 @@
         align-items: center;
     }
 
-    .gradient-box {
+    .gradient-box-body, .gradient-box-other{
         min-width: 250px;
         min-height: 300px;
     }
 
-    .gradient-box p{
+    .gradient-box-body p{
         margin: .5rem;
         padding: .5rem;
     }
