--- a/src/pages/juegayaprende/jovenes/jovenes3/Jovenes3.css
+++ b/src/pages/juegayaprende/jovenes/jovenes3/Jovenes3.css
@@ -54,6 +54,7 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    font-family: 'Oswald';
     justify-content: center;
 }
 
@@ -156,6 +157,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.box-no-game h3{
+    font-family: 'Oswald';
 }
 
 .box-no-game p{
