--- a/src/pages/inicio/Inicio.css
+++ b/src/pages/inicio/Inicio.css
@@ -21,8 +21,9 @@
 
   .presentacion{
     background-image: url(./img/fondo-pres.png);
-    min-height: 300px;
-    padding: 0 .5rem;
+    height: 100%;
+    margin: 1rem 0;
+    padding: .5rem .5rem;
   }
 
   .title-presen{
@@ -49,6 +50,68 @@
     font-weight: bold;
   }
 
+  .dia-especial{
+    background-color: #440042;
+    margin: 1rem 0;
+    padding: 1rem;
+  }
+
+  .dia-especial h1{
+    color: white;
+    font-family: "Oswald";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 104px;
+    text-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+    text-align: center;
+  }
+
+  .dia-especial p{
+    color: white;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .hoy{
+    background-color: #A12161;
+    border-radius: 5px;
+    color: #FFF8F8;
+    font-weight: bold;
+    margin: 1rem 0;
+    padding: 0.5rem;
+    text-align: center;
+  }
+
+  .cuerpo-hoy{
+    background-color: var(--fondo);
+    border-radius: 5px;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .cuerpo-hoy h3{
+    color: #A12161;
+  }
+
+  .cuerpo-hoy p{
+    color: #030303
+  }
+
+  .cuerpo-hoy a{
+    color: #440042;
+    text-decoration: none;
+  }
+
+  .dia-especial img{
+    margin: 1rem 3rem;
+    max-width: 300px;
+  }
+
   .vector {
     display: flex;
     flex-direction: column;
@@ -69,7 +132,7 @@
     font-weight: 700;
     font-size: 30px;
     text-align: center;
-    color: #000000;
+    color: #030303;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     justify-content: center;
   }
@@ -143,7 +206,7 @@
       }
 
     .presentacion{
-      padding: 0 1rem;
+      padding: .5rem 1rem;
     }
 
     .title-presen{
@@ -152,6 +215,21 @@
 
     .contacto-present{
       margin: 1rem 4rem;
+    }
+
+    .nuevo-calendario{
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      padding: 1rem;
+    }
+
+    .hoy-contenido{
+      display: flex;
+    }
+
+    .especial-hoy{
+      margin-left: 1rem;
     }
 
     .vector h2 {
@@ -194,6 +272,46 @@
 
     .contacto-present{
       margin: 1rem 8rem;
+    }
+
+    .dia-especial h1{
+      font-size: 40px;
+    }
+
+    .dia-especial p{
+      font-size: 20px;
+      margin: 0 6rem;
+    }
+
+    .especial-hoy{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 500px;
+    }
+
+    .hoy{
+      font-size: 1.8rem;
+    }
+
+    .cuerpo-hoy h3{
+      font-size: 1.5rem;
+      margin-bottom: .5rem;
+    }
+
+    .cuerpo-hoy p{
+      margin: 0;
+      margin-bottom: 1.5rem;
+      padding: .5rem;
+    }
+
+    .cuerpo-hoy a{
+      font-size: 1.3rem;
+      
+    }
+
+    .dia-especial img{
+      max-width: 400px;
     }
 
     .home-cards {
