Adding cards with props in jovenes3

--- a/src/pages/juegayaprende/jovenes/jovenes3/Jovenes3.css
+++ b/src/pages/juegayaprende/jovenes/jovenes3/Jovenes3.css
@@ -178,6 +178,12 @@
     color: #A12161;
 }
 
+.boxes-no-game{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
 .barnav-recursosyjuegos{
     display: flex;
     align-items: center;
