--- a/src/pages/inicio/Inicio.css
+++ b/src/pages/inicio/Inicio.css
@@ -77,6 +77,12 @@
     text-align: center;
   }
 
+  .hoy-contenido img{
+    min-width: 100px;
+    max-width: 200px;
+    width: 70%;
+  }
+
   .hoy{
     background-color: #A12161;
     border-radius: 5px;
@@ -142,36 +148,8 @@
     justify-content: space-around;
     align-items: center;
   }
-  .home-cards {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 1rem 0;
-    padding: 1rem 2rem;
-  }
 
-  .card-border {
-    border-style: solid;
-    border-width: 10px;
-    border-image: linear-gradient(
-        180deg,
-        #ff7a00 0%,
-        #f67209 0.01%,
-        #a12161 81.35%
-      )
-      1;
-  }
-  
-  .home-cards h5 {
-    font-family: "Oswald";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 25px;
-    text-align: center;
-    line-height: 3;
-  }
-  .go-home {
+ .go-home {
     padding: .5rem;
     text-align: center;  
 }
@@ -239,11 +217,6 @@
     .cards-container {
     flex-direction: row;
     }
-
-    .home-cards {
-        margin-bottom: 3rem;
-        padding: .5rem 1rem;
-      }
 
 }
 
@@ -313,11 +286,6 @@
     .dia-especial img{
       max-width: 400px;
     }
-
-    .home-cards {
-        margin-bottom: 3rem;
-        padding: .5rem 2.5rem;
-      }
 }
 
 /*Resolución macro*/
