--- a/src/pages/inicio/Inicio.css
+++ b/src/pages/inicio/Inicio.css
@@ -50,13 +50,13 @@
     font-weight: bold;
   }
 
-  .dia-especial{
+  .calendario-section{
     background-color: #440042;
     margin: 1rem 0;
     padding: 1rem;
   }
 
-  .dia-especial h1{
+  .calendario-section h1{
     color: white;
     font-family: "Oswald";
     font-style: normal;
@@ -67,7 +67,7 @@
     text-align: center;
   }
 
-  .dia-especial p{
+  .calendario-section p{
     color: white;
     font-family: "Montserrat";
     font-style: normal;
@@ -77,20 +77,22 @@
     text-align: center;
   }
 
-  .hoy-contenido img{
-    min-width: 100px;
-    max-width: 200px;
-    width: 70%;
+  .nuevo-contenido{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 
-  .hoy{
-    background-color: #A12161;
-    border-radius: 5px;
-    color: #FFF8F8;
-    font-weight: bold;
-    margin: 1rem 0;
-    padding: 0.5rem;
-    text-align: center;
+  .calendario-imagen{
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+  }
+
+  .calendario-imagen img{
+    min-width: 100px;
+    max-width: 200px;
+    width: 100%;
   }
 
   .cuerpo-hoy{
@@ -100,22 +102,8 @@
     text-align: center;
   }
 
-  .cuerpo-hoy h3{
-    color: #A12161;
-  }
-
   .cuerpo-hoy p{
     color: #030303
-  }
-
-  .cuerpo-hoy a{
-    color: #440042;
-    text-decoration: none;
-  }
-
-  .dia-especial img{
-    margin: 1rem 3rem;
-    max-width: 300px;
   }
 
   .vector {
@@ -202,14 +190,6 @@
       padding: 1rem;
     }
 
-    .hoy-contenido{
-      display: flex;
-    }
-
-    .especial-hoy{
-      margin-left: 1rem;
-    }
-
     .vector h2 {
         font-size: 40px;
       }
@@ -247,11 +227,15 @@
       margin: 1rem 8rem;
     }
 
-    .dia-especial h1{
+    .nuevo-calendario{
+      flex-direction: row;
+    }
+
+    .calendario-imagen h1{
       font-size: 40px;
     }
 
-    .dia-especial p{
+    .calendario-imagen p{
       font-size: 20px;
       margin: 0 6rem;
     }
@@ -283,7 +267,7 @@
       
     }
 
-    .dia-especial img{
+    .calendario-imagen img{
       max-width: 400px;
     }
 }
