Creation of error 404 and resolving some issues with links, adding styles to monthly calendar

--- a/src/components/calendario/Calendario.css
+++ b/src/components/calendario/Calendario.css
@@ -40,6 +40,10 @@
     text-decoration: none;
 }
 
+.texto-mes a:hover{
+    color: var(--morado-oscuro);
+}
+
 .imagen-mes{
     margin: .5rem auto;
     max-height: 100px;
