--- a/src/components/main-menu-jovenes/Mainmenujo.css
+++ b/src/components/main-menu-jovenes/Mainmenujo.css
@@ -52,12 +52,6 @@
     font-size: 15px;
 }
 
-@media screen and (min-width:768px) {
-
-}
-@media screen and (min-width:1024px) {
-
-}
-@media screen and (min-width:1200px) {
-    
+.enlace a:hover{
+    color: var(--rosa);
 }
