Adding hover to button in Index

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -60,6 +60,11 @@
     text-decoration: none;
     color: white;
   }
+
+  .initial-button a:hover{
+    color: var(--morado-osc);
+  }
+
   .pink-title {
     color: #f2acb9;
   }
